--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover the perfect Garlic Roasted Chicken recipe. A citrus-unfused delight with a savory herb blend, easy to prep and perfect for family dinners">
+    <meta name="keywords" content="roasted chicken, lemon garlic chicken, chicken recipe, herb-infused chicken, dinner recipe, Cooks Delight, cooking, poultry">
+    <meta name="author" content="Isabella Russo">
     <title>TastyBlog - Лучшие рецепты</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
